// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/UITitle > renders correctly - basic 1`] = `
<h1
  class="ui-title large 1"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`vue/UITitle > renders correctly - modifier different than level 1`] = `
<h1
  class="ui-title 5 large"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`vue/UITitle > renders correctly - with id 1`] = `
<h1
  class="ui-title  1"
  id="test"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`vue/UITitle > renders correctly - with itemprop 1`] = `
<h1
  class="ui-title  1"
  itemprop="name"
>
  <strong>
    *Test*
  </strong>
</h1>
`;
